fix: next.js unable to find css modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,10 @@
   },
   "include": [
     "src",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "next-env.d.ts",
+    "app/**/*.ts",
+    "app/**/*.tsx"
   ],
   "exclude": [
     "node_modules"
